<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/catalogoFragment"
        android:icon="@drawable/ic_catalogo"
        android:title="@string/nav_catalogo" />
    <item
        android:id="@+id/misPrestamosFragment"
        android:icon="@drawable/ic_prestamos"
        android:title="@string/nav_mis_prestamos" />
    <item
        android:id="@+id/gestionEquiposFragment"
        android:icon="@drawable/ic_equipos"
        android:title="@string/nav_gestion_equipos" />
    <item
        android:id="@+id/solicitudesPendientesFragment"
        android:icon="@drawable/ic_solicitudes"
        android:title="@string/nav_solicitudes" />
    <item
        android:id="@+id/nuevaIncidenciaFragment"
        android:icon="@drawable/ic_incidencia"
        android:title="@string/nav_incidencias" />
</menu>
